--- a/ibus-tweaker@tuberry.github.com/locale/zh_CN/LC_MESSAGES/ibus-tweaker.po
+++ b/ibus-tweaker@tuberry.github.com/locale/zh_CN/LC_MESSAGES/ibus-tweaker.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-22 21:53+0800\n"
-"PO-Revision-Date: 2020-04-22 21:55+0800\n"
+"POT-Creation-Date: 2020-04-26 05:21+0800\n"
+"PO-Revision-Date: 2020-04-26 05:21+0800\n"
 "Last-Translator: tuberry <tuberry@example.com>\n"
 "Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
@@ -16,30 +16,70 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: prefs.js:54
-msgid "ascii mode on"
-msgstr "英文"
+#: prefs.js:48
+msgid "Red"
+msgstr "玫瑰红"
 
-#: prefs.js:55
-msgid "ascii mode off"
-msgstr "中文"
+#: prefs.js:48
+msgid "Green"
+msgstr "薄荷绿"
 
-#: prefs.js:78
-msgid "Auto switch ascii mode"
-msgstr "自动切换"
+#: prefs.js:48
+msgid "Orange"
+msgstr "热带橙"
 
-#: prefs.js:82
-msgid "Enable short cut"
-msgstr "快捷键"
+#: prefs.js:48
+msgid "Blue"
+msgstr "科技蓝"
 
-#: prefs.js:83
-msgid "Run dialog"
-msgstr "运行"
+#: prefs.js:48
+msgid "Purple"
+msgstr "木槿紫"
 
-#: prefs.js:85
-msgid "IBus candidate font"
-msgstr "字体"
+#: prefs.js:48
+msgid "Turquoise"
+msgstr "水鸭青"
 
-#: prefs.js:86
+#: prefs.js:48
+msgid "Grey"
+msgstr "混沌灰"
+
+#: prefs.js:67
+msgid "Vertical"
+msgstr "竖直"
+
+#: prefs.js:67
+msgid "Horizontal"
+msgstr "水平"
+
+#: prefs.js:68
+msgid "ascii mode off when initializing"
+msgstr "首次启动切中文"
+
+#: prefs.js:69
+msgid "ascii mode on when initializing"
+msgstr "首次启动切英文"
+
+#: prefs.js:74
 msgid "Hide Activities"
 msgstr "隐藏活动按钮"
+
+#: prefs.js:75
+msgid "Run dialog"
+msgstr "运行命令框"
+
+#: prefs.js:76
+msgid "MS IME theme"
+msgstr "微软拼音主题"
+
+#: prefs.js:77
+msgid "Candidates orientation"
+msgstr "候选框方向"
+
+#: prefs.js:78
+msgid "Use custom font"
+msgstr "自定义字体"
+
+#: prefs.js:79
+msgid "Auto switch ASCII mode"
+msgstr "自动切换中英文"
