--- a/ibus-tweaker@tuberry.github.com/locale/zh_CN/LC_MESSAGES/ibus-tweaker.po
+++ b/ibus-tweaker@tuberry.github.com/locale/zh_CN/LC_MESSAGES/ibus-tweaker.po
@@ -62,7 +62,7 @@ msgstr "首次启动切英文"
 
 #: prefs.js:74
 msgid "Hide Activities"
-msgstr "隐藏活动按钮"
+msgstr "去活动按钮"
 
 #: prefs.js:75
 msgid "Run dialog"
@@ -70,7 +70,7 @@ msgstr "运行命令框"
 
 #: prefs.js:76
 msgid "MS IME theme"
-msgstr "微软拼音主题"
+msgstr "仿微软主题"
 
 #: prefs.js:77
 msgid "Candidates orientation"
@@ -82,4 +82,4 @@ msgstr "自定义字体"
 
 #: prefs.js:79
 msgid "Auto switch ASCII mode"
-msgstr "自动切换中英文"
+msgstr "中英文切换"
