Fix expression to Full instead of Repeated
Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/customize-ibus@hollowman.ml/locale/customize-ibus.pot
+++ b/customize-ibus@hollowman.ml/locale/customize-ibus.pot
@@ -126,7 +126,7 @@ msgid "Centered"
 msgstr ""
 
 #: prefs.js:81 prefs.js:87
-msgid "Repeated"
+msgid "Full"
 msgstr ""
 
 #: prefs.js:82 prefs.js:88
