--- a/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
+++ b/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
@@ -126,7 +126,7 @@ msgid "Centered"
 msgstr "居中"
 
 #: prefs.js:81 prefs.js:87
-msgid "Repeated"
+msgid "Full"
 msgstr "铺满"
 
 #: prefs.js:82 prefs.js:88
