--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,7 +1,13 @@
+gnome-shell-extension-customize-ibus (52) mx; urgency=medium
+
+  * v52: Add feature for fixing candidate box.
+
+ -- Hollow Man <hollowman@hollowman.ml>  Tue, 25 May 2021 23:53:18 +0800
+
 gnome-shell-extension-customize-ibus (50) mx; urgency=medium
 
-  * v50: Add open menu for candidate right click
-  Add click Input Source Indicator to switch source
+  * v50: Add open menu for candidate right click.
+  Add click Input Source Indicator to switch source.
 
  -- Hollow Man <hollowman@hollowman.ml>  Tue, 25 May 2021 10:48:47 +0800
 
@@ -20,7 +26,7 @@ gnome-shell-extension-customize-ibus (46) mx; urgency=medium
 
 gnome-shell-extension-customize-ibus (44) mx; urgency=medium
 
-  * v44: Initial Debian Package
+  * v44: Initial Debian Package.
 
  -- Hollow Man <hollowman@hollowman.ml>  Sat, 15 May 2021 12:46:06 +0800
 
