--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-customize-ibus (54) mx; urgency=medium
+
+  * v54: Fix support for ibus-rime of candidate box right click and indicator.
+
+ -- Hollow Man <hollowman@hollowman.ml>  Sun, 30 May 2021 21:02:28 +0800
+
 gnome-shell-extension-customize-ibus (52) mx; urgency=medium
 
   * v52: Add feature for fixing candidate box.
