--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-customize-ibus (55) mx; urgency=medium
+
+  * v55: Merge 3.38 into 40, make some changes for UI.
+
+ -- Hollow Man <hollowman@hollowman.ml>  Sun, 30 May 2021 21:02:28 +0800
+
 gnome-shell-extension-customize-ibus (54) mx; urgency=medium
 
   * v54: Fix support for ibus-rime of candidate box right click and indicator.
