Fix typos and indicator scroll settings control
Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
+++ b/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
@@ -278,11 +278,11 @@ msgid "unknown (installed ?)"
 msgstr "未知（已安装？）"
 
 #: prefs.js:233
-msgid "Enable indicater left click"
+msgid "Enable indicator left click"
 msgstr "启用指示器鼠标左击"
 
 #: prefs.js:236
-msgid "Enable indicater auto hide timeout (unit: seconds)"
+msgid "Enable indicator auto-hide timeout (unit: seconds)"
 msgstr "启用指示器自动隐藏时延（单位：秒）"
 
 #: prefs.js:245
@@ -375,7 +375,7 @@ msgid "Enable scroll to switch input source"
 msgstr "滚动切换输入源"
 
 #: prefs.js:506
-msgid "Indicater popup animation"
+msgid "indicator popup animation"
 msgstr "指示器显示动画"
 
 #: prefs.js:540
@@ -539,11 +539,11 @@ msgstr ""
 #: prefs.js:1715
 msgid ""
 "Here you can set to show input source indicator, default is to show "
-"indicator everytime you type, move caret or switch input source. You can set "
+"indicator every time you type, move caret or switch input source. You can set "
 "to show indicator only when switching input source. You can also set to only "
 "notify in ASCII mode, mouse right click to close indicator, scroll to switch "
 "input source, popup animation, font, mouse left click to switch input source "
-"or drag to move indicator, enable autohide and auto hide timeout (in "
+"or drag to move indicator, enable auto-hide and auto-hide timeout (in "
 "seconds)."
 msgstr ""
 "这里你可以选择开启输入源指示器，默认是当你打字、移动文字光标或者切换输入源时"
@@ -565,7 +565,7 @@ msgstr ""
 msgid ""
 "When light theme and dark theme are turned on at the same time, the IBus "
 "theme will automatically follow GNOME Night Light mode, use light theme when "
-"off, and use dark theme when on. When only one of the light theme and dark "
+"off, and use dark theme when on. When only the light theme or dark "
 "theme is turned on, the IBus theme will always use the theme that is turned "
 "on."
 msgstr ""
@@ -594,15 +594,15 @@ msgstr ""
 #: prefs.js:1840
 msgid ""
 "Support customizing your IBus Input window background with a picture. It has "
-"a higher priority than theme defined background."
+"a higher priority than the theme-defined background."
 msgstr "支持使用图片来自定义 IBus 候选框背景，其具有比主题背景更高的优先级。"
 
 #: prefs.js:1853
 msgid ""
 "When light background and dark background are turned on at the same time, "
 "the IBus background will automatically follow GNOME Night Light mode, use "
-"light background when off, and use dark background when on. When only one of "
-"the light background and dark background is turned on, the IBus background "
+"light background when off, and use dark background when on. When only "
+"the light background or dark background is turned on, the IBus background "
 "will always use the background that is turned on."
 msgstr ""
 "当浅色背景和深色背景同时开启时，IBus 背景将会自动跟随 GNOME 夜灯模式，关闭时"
