V67: Further fix support for openSUSE Leap 15.3
Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,8 +1,14 @@
+gnome-shell-extension-customize-ibus (67) mx; urgency=medium
+
+  * v67: Further fix support for openSUSE Leap 15.3.
+
+ -- Hollow Man <hollowman@hollowman.ml>  Wed, 07 Jul 2021 15:45:31 +0800
+
 gnome-shell-extension-customize-ibus (66) mx; urgency=medium
 
   * v66: Add support for openSUSE Leap 15.3.
 
- -- Hollow Man <hollowman@hollowman.ml>  Mon, 06 Jul 2021 00:31:29 +0800
+ -- Hollow Man <hollowman@hollowman.ml>  Tue, 06 Jul 2021 00:31:29 +0800
 
 gnome-shell-extension-customize-ibus (65) mx; urgency=medium
 
