--- a/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
+++ b/customize-ibus@hollowman.ml/locale/zh_CN/LC_MESSAGES/customize-ibus.po
@@ -415,7 +415,7 @@ msgstr "深度定制 IBus 的外观、行为、系统托盘以及输入指示。
 #: prefs.js:1404
 msgid ""
 "<span size=\"small\">Copyright © 2021 <a href=\"https://github.com/"
-HollowMan6\">Hollow Man</a> &lt;<a href=\"mailto:hollowman@hollowman.ml"
+"HollowMan6\">Hollow Man</a> &lt;<a href=\"mailto:hollowman@hollowman.ml"
 "\">hollowman@hollowman.ml</a>&gt;</span>"
 msgstr ""
 "<span size=\"small\">版权所有 © 2021 <a href=\"https://github.com/"
