--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -2,50 +2,50 @@ gnome-shell-extension-customize-ibus (68) mx; urgency=medium
 
   * v68: Add functionality to modify opacity.
 
- -- Hollow Man <hollowman@hollowman.ml>  Fri, 09 Jul 2021 02:22:28 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Fri, 09 Jul 2021 02:22:28 +0800
 
 gnome-shell-extension-customize-ibus (67) mx; urgency=medium
 
   * v67: Further fix support for openSUSE Leap 15.3.
 
- -- Hollow Man <hollowman@hollowman.ml>  Wed, 07 Jul 2021 15:45:31 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Wed, 07 Jul 2021 15:45:31 +0800
 
 gnome-shell-extension-customize-ibus (66) mx; urgency=medium
 
   * v66: Add support for openSUSE Leap 15.3.
 
- -- Hollow Man <hollowman@hollowman.ml>  Tue, 06 Jul 2021 00:31:29 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Tue, 06 Jul 2021 00:31:29 +0800
 
 gnome-shell-extension-customize-ibus (65) mx; urgency=medium
 
   * v65: Move project under openSUSE.
 
- -- Hollow Man <hollowman@hollowman.ml>  Mon, 30 Jun 2021 22:25:30 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Mon, 30 Jun 2021 22:25:30 +0800
 
 gnome-shell-extension-customize-ibus (64) mx; urgency=medium
 
   * v64: Fix typos and indicator scroll settings control.
 
- -- Hollow Man <hollowman@hollowman.ml>  Mon, 28 Jun 2021 21:22:52 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Mon, 28 Jun 2021 21:22:52 +0800
 
 gnome-shell-extension-customize-ibus (63) mx; urgency=medium
 
   * v63: Fix to avoid tainting the GNOME Shell environment.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sat, 26 Jun 2021 13:42:15 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sat, 26 Jun 2021 13:42:15 +0800
 
 gnome-shell-extension-customize-ibus (62) mx; urgency=medium
 
   * v62: Fix settings sync problem with ibus-setup (preference).
 
- -- Hollow Man <hollowman@hollowman.ml>  Sat, 26 Jun 2021 00:39:24 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sat, 26 Jun 2021 00:39:24 +0800
 
 gnome-shell-extension-customize-ibus (61) mx; urgency=medium
 
   * v61: Add scroll on candidates box to switch among pages or candidates.
   Add scroll on indicator to switch input source.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sun, 20 Jun 2021 18:43:54 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sun, 20 Jun 2021 18:43:54 +0800
 
 gnome-shell-extension-customize-ibus (60) mx; urgency=medium
 
@@ -53,74 +53,74 @@ gnome-shell-extension-customize-ibus (60) mx; urgency=medium
   Add show or hide candidate box page buttons.
   Improve on showing background. 
 
- -- Hollow Man <hollowman@hollowman.ml>  Fri, 18 Jun 2021 23:34:44 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Fri, 18 Jun 2021 23:34:44 +0800
 
 gnome-shell-extension-customize-ibus (59) mx; urgency=medium
 
   * v59: Add fix IME list order function and buttons to start official customization settings.
 
- -- Hollow Man <hollowman@hollowman.ml>  Wed, 10 Jun 2021 17:26:08 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Wed, 10 Jun 2021 17:26:08 +0800
 
 gnome-shell-extension-customize-ibus (58) mx; urgency=medium
 
   * v58: Add icons for opening files directly from Prefs.
   Change *.dconf into *.ini for configurations files.
 
- -- Hollow Man <hollowman@hollowman.ml>  Wed, 09 Jun 2021 23:57:26 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Wed, 09 Jun 2021 23:57:26 +0800
 
 gnome-shell-extension-customize-ibus (57) mx; urgency=medium
 
   * v57: Add feature for exporting and restoring settings from file.
 
- -- Hollow Man <hollowman@hollowman.ml>  Tue, 08 Jun 2021 21:58:15 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Tue, 08 Jun 2021 21:58:15 +0800
 
 gnome-shell-extension-customize-ibus (56) mx; urgency=medium
 
   * v56: UI changes. Add restoring default settings option. Clean codebase.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sun, 06 Jun 2021 16:48:39 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sun, 06 Jun 2021 16:48:39 +0800
 
 gnome-shell-extension-customize-ibus (55) mx; urgency=medium
 
   * v55: Merge 3.38 into 40, make some changes for UI.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sat, 05 Jun 2021 12:29:31 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sat, 05 Jun 2021 12:29:31 +0800
 
 gnome-shell-extension-customize-ibus (54) mx; urgency=medium
 
   * v54: Fix support for ibus-rime of candidate box right click and indicator.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sun, 30 May 2021 21:02:28 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sun, 30 May 2021 21:02:28 +0800
 
 gnome-shell-extension-customize-ibus (52) mx; urgency=medium
 
   * v52: Add feature for fixing candidate box.
 
- -- Hollow Man <hollowman@hollowman.ml>  Tue, 25 May 2021 23:53:18 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Tue, 25 May 2021 23:53:18 +0800
 
 gnome-shell-extension-customize-ibus (50) mx; urgency=medium
 
   * v50: Add open menu for candidate right click.
   Add click Input Source Indicator to switch source.
 
- -- Hollow Man <hollowman@hollowman.ml>  Tue, 25 May 2021 10:48:47 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Tue, 25 May 2021 10:48:47 +0800
 
 gnome-shell-extension-customize-ibus (48) mx; urgency=medium
 
   * v48: Add right click candidate box to switch input source. 
   Support show or hide tray icon, directly click tray icon to switch input source.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sun, 23 May 2021 23:16:52 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sun, 23 May 2021 23:16:52 +0800
 
 gnome-shell-extension-customize-ibus (46) mx; urgency=medium
 
   * v46: Fix several BUGs. Add right click to close source indicator.
 
- -- Hollow Man <hollowman@hollowman.ml>  Fri, 21 May 2021 19:14:42 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Fri, 21 May 2021 19:14:42 +0800
 
 gnome-shell-extension-customize-ibus (44) mx; urgency=medium
 
   * v44: Initial Debian Package.
 
- -- Hollow Man <hollowman@hollowman.ml>  Sat, 15 May 2021 12:46:06 +0800
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sat, 15 May 2021 12:46:06 +0800
 
