--- a/customize-ibus@hollowman.ml/locale/customize-ibus.pot
+++ b/customize-ibus@hollowman.ml/locale/customize-ibus.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Customize Ibus 70\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: hollowman@hollowman.ml\n"
 "POT-Creation-Date: 2021-08-25 23:40+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
