--- a/customize-ibus@hollowman.ml/locale/zh_HK/LC_MESSAGES/customize-ibus.po
+++ b/customize-ibus@hollowman.ml/locale/zh_HK/LC_MESSAGES/customize-ibus.po
@@ -1,5 +1,5 @@
-# Chinese (Simplified) translations for customize-ibus package
-# customize-ibus 软件包的简体中文翻译.
+# Chinese (Traditional, Hong Kong) translations for customize-ibus package
+# customize-ibus 軟件包的繁體中文翻譯.
 # Copyright (C) 2021 Hollow Man
 # This file is distributed under the same license as the customize-ibus package.
 # Hollow Man <hollowman@hollowman.ml>, 2021.
@@ -10,9 +10,9 @@ msgstr ""
 "POT-Creation-Date: 2021-08-25 23:40+0800\n"
 "PO-Revision-Date: 2021-08-25 16:39+0000\n"
 "Last-Translator: Hollow Man <hollowman@hollowman.ml>\n"
-"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
-"customize-ibus/customize-ibus/zh_Hans/>\n"
-"Language: zh_CN\n"
+"Language-Team: Chinese (Traditional, Hong Kong) <https://hosted.weblate.org/projects/"
+"customize-ibus/customize-ibus/zh_Hant_HK/>\n"
+"Language: zh_HK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,43 +21,43 @@ msgstr ""
 
 #: extension.js:1401
 msgid "IBus panel service connected!"
-msgstr "IBus 面板服务连接成功！"
+msgstr "IBus 面板服務連接成功！"
 
 #: extension.js:1933
 msgid "loading light user theme for IBus:"
-msgstr "正在为 IBus 加载浅色用户主题:"
+msgstr "正在為 IBus 加載淺色用户主題:"
 
 #: extension.js:1943
 msgid "loading dark user theme for IBus:"
-msgstr "正在为 IBus 加载深色用户主题:"
+msgstr "正在為 IBus 加載深色用户主題:"
 
 #: extension.js:1948
 msgid "loading default theme for IBus"
-msgstr "正在为 IBus 加载当前系统主题"
+msgstr "正在為 IBus 加載當前系統主題"
 
 #: extension.js:2144
 msgid "loading background for IBus:"
-msgstr "正在为 IBus 加载背景:"
+msgstr "正在為 IBus 加載背景:"
 
 #: extension.js:2154
 msgid "remove custom background for IBus"
-msgstr "为 IBus 去除自定义背景"
+msgstr "為 IBus 去除自定義背景"
 
 #: extension.js:2727
 msgid "Successfully triggered a restart for IBus"
-msgstr "成功触发一次 IBus 的重新启动"
+msgstr "成功觸發一次 IBus 的重新啓動"
 
 #: extension.js:2745
 msgid "Copy Emoji"
-msgstr "复制 Emoji"
+msgstr "複製 Emoji"
 
 #: extension.js:2766 prefs.js:1488 prefs.js:2053
 msgid "Customize IBus"
-msgstr "自定义 IBus"
+msgstr "自定義 IBus"
 
 #: extension.js:2790 prefs.js:273 prefs.js:511
 msgid "IBus Preferences"
-msgstr "IBus 首选项"
+msgstr "IBus 首選項"
 
 #: extension.js:2811 extension.js:2826 prefs.js:515
 msgid "IBus Version"
@@ -65,7 +65,7 @@ msgstr "IBus 版本"
 
 #: extension.js:2840
 msgid "Restart"
-msgstr "重新启动"
+msgstr "重新啓動"
 
 #: extension.js:2861
 msgid "Quit"
@@ -73,75 +73,75 @@ msgstr "退出"
 
 #: prefs.js:59
 msgid "Custom IME light theme"
-msgstr "自定义浅色主题"
+msgstr "自定義淺色主題"
 
 #: prefs.js:62
 msgid "Custom IME dark theme"
-msgstr "自定义深色主题"
+msgstr "自定義深色主題"
 
 #: prefs.js:64 prefs.js:92
 msgid "Use custom font"
-msgstr "自定义字体"
+msgstr "自定義字體"
 
 #: prefs.js:66
 msgid "Use custom light background"
-msgstr "自定义浅色背景"
+msgstr "自定義淺色背景"
 
 #: prefs.js:69
 msgid "Use custom dark background"
-msgstr "自定义深色背景"
+msgstr "自定義深色背景"
 
 #: prefs.js:72
 msgid "Candidates scroll"
-msgstr "候选框滚动"
+msgstr "候選框滾動"
 
 #: prefs.js:74
 msgid "Auto switch ASCII mode"
-msgstr "自动切换源"
+msgstr "自動切換源"
 
 #: prefs.js:75
 msgid "Candidates orientation"
-msgstr "候选框方向"
+msgstr "候選框方向"
 
 #: prefs.js:77
 msgid "Candidates popup animation"
-msgstr "候选框动画"
+msgstr "候選框動畫"
 
 #: prefs.js:80
 msgid "Fix candidate box"
-msgstr "固定候选框"
+msgstr "固定候選框"
 
 #: prefs.js:84
 msgid "Directly switch source with click"
-msgstr "点击切换输入源"
+msgstr "點擊切換輸入源"
 
 #: prefs.js:88
 msgid "Candidate box right click"
-msgstr "候选框右击"
+msgstr "候選框右擊"
 
 #: prefs.js:97
 msgid "Candidate box opacity"
-msgstr "候选框透明"
+msgstr "候選框透明"
 
 #: prefs.js:107
 msgid "Start/Restart IBus"
-msgstr "启动/重启 IBus"
+msgstr "啓動/重啓 IBus"
 
 #: prefs.js:113
 msgid "Restore Default Settings"
-msgstr "恢复默认设置"
+msgstr "恢復默認設置"
 
 #: prefs.js:119 prefs.js:788
 msgid "Export Current Settings"
-msgstr "导出当前设置"
+msgstr "導出當前設置"
 
 #: prefs.js:125 prefs.js:812
 msgid "Import Settings from File"
-msgstr "从文件导入"
+msgstr "從文件導入"
 
 #: prefs.js:131
 msgid "Vertical"
-msgstr "竖直"
+msgstr "豎直"
 
 #: prefs.js:132
 msgid "Horizontal"
@@ -149,27 +149,27 @@ msgstr "水平"
 
 #: prefs.js:136
 msgid "Don't Remember Position"
-msgstr "不记住位置"
+msgstr "不記住位置"
 
 #: prefs.js:137
 msgid "Remember Last Position"
-msgstr "记住最后位置"
+msgstr "記住最後位置"
 
 #: prefs.js:141
 msgid "Don't Remember State"
-msgstr "不记住状态"
+msgstr "不記住狀態"
 
 #: prefs.js:142
 msgid "Remember Input State"
-msgstr "记住输入状态"
+msgstr "記住輸入狀態"
 
 #: prefs.js:146
 msgid "Change Page"
-msgstr "切换当前页面"
+msgstr "切換當前頁面"
 
 #: prefs.js:147
 msgid "Change Candidate"
-msgstr "切换选中候选"
+msgstr "切換選中候選"
 
 #: prefs.js:151
 msgid "On"
@@ -185,23 +185,23 @@ msgstr "保持"
 
 #: prefs.js:157
 msgid "Left"
-msgstr "左键"
+msgstr "左鍵"
 
 #: prefs.js:158
 msgid "Right"
-msgstr "右键"
+msgstr "右鍵"
 
 #: prefs.js:162
 msgid "Drag to Move"
-msgstr "拖拽移动"
+msgstr "拖拽移動"
 
 #: prefs.js:163 prefs.js:168
 msgid "Switch Source"
-msgstr "换输入源"
+msgstr "換輸入源"
 
 #: prefs.js:167
 msgid "Open Menu"
-msgstr "打开菜单"
+msgstr "打開菜單"
 
 #: prefs.js:172
 msgid "Center"
@@ -245,7 +245,7 @@ msgstr "居中"
 
 #: prefs.js:185 prefs.js:191
 msgid "Full"
-msgstr "铺满"
+msgstr "鋪滿"
 
 #: prefs.js:186 prefs.js:192
 msgid "Zoom"
@@ -253,23 +253,23 @@ msgstr "裁剪"
 
 #: prefs.js:196 prefs.js:201
 msgid "No repeat"
-msgstr "不重复"
+msgstr "不重複"
 
 #: prefs.js:197 prefs.js:202
 msgid "Repeat"
-msgstr "重复"
+msgstr "重複"
 
 #: prefs.js:206 prefs.js:213
 msgid "None"
-msgstr "无"
+msgstr "無"
 
 #: prefs.js:207 prefs.js:214
 msgid "Slide"
-msgstr "滑动"
+msgstr "滑動"
 
 #: prefs.js:208 prefs.js:215
 msgid "Fade"
-msgstr "渐退"
+msgstr "漸退"
 
 #: prefs.js:209 prefs.js:216
 msgid "All"
@@ -281,11 +281,11 @@ msgstr "IBus 版本： "
 
 #: prefs.js:224 prefs.js:400
 msgid "unknown (installed ?)"
-msgstr "未知（已安装？）"
+msgstr "未知（已安裝？）"
 
 #: prefs.js:243
 msgid "Enable indicator left click"
-msgstr "启用指示器鼠标左击"
+msgstr "啓用指示器鼠標左擊"
 
 #: prefs.js:247
 msgid "Indicator opacity"
@@ -293,64 +293,64 @@ msgstr "指示器透明度"
 
 #: prefs.js:257
 msgid "Enable indicator auto-hide timeout (unit: seconds)"
-msgstr "启用指示器自动隐藏时延（单位：秒）"
+msgstr "啓用指示器自動隱藏時延（單位：秒）"
 
 #: prefs.js:267
 msgid "GNOME Settings"
-msgstr "GNOME 设置"
+msgstr "GNOME 設置"
 
 #: prefs.js:300 prefs.js:311
 msgid "Select an Image"
-msgstr "选择一个图片"
+msgstr "選擇一個圖片"
 
 #: prefs.js:305 prefs.js:316 prefs.js:330 prefs.js:341 prefs.js:350
 #: prefs.js:363 prefs.js:376 prefs.js:389
 msgid "(None)"
-msgstr "（无）"
+msgstr "（無）"
 
 #: prefs.js:325 prefs.js:336
 msgid "Select an IBus Stylesheet"
-msgstr "选择一个 IBus 风格样式表"
+msgstr "選擇一個 IBus 風格樣式表"
 
 #: prefs.js:419
 msgid "General"
-msgstr "常规"
+msgstr "常規"
 
 #: prefs.js:470
 msgid "Fix IME list order"
-msgstr "固定输入法列表"
+msgstr "固定輸入法列表"
 
 #: prefs.js:474
 msgid "Enable drag to reposition candidate box"
-msgstr "拖拽移动候选框"
+msgstr "拖拽移動候選框"
 
 #: prefs.js:478
 msgid "Candidate box page buttons"
-msgstr "候选框调页按钮"
+msgstr "候選框調頁按鈕"
 
 #: prefs.js:483
 msgid "Tray"
-msgstr "托盘"
+msgstr "托盤"
 
 #: prefs.js:487
 msgid "Show IBus tray icon"
-msgstr "显示 IBus 托盘图标"
+msgstr "顯示 IBus 托盤圖標"
 
 #: prefs.js:499
 msgid "Add Additional Menu Entries"
-msgstr "增加额外菜单项"
+msgstr "增加額外菜單項"
 
 #: prefs.js:503
 msgid "Copying Emoji"
-msgstr "复制 Emoji"
+msgstr "複製 Emoji"
 
 #: prefs.js:507
 msgid "This Extension's Preferences"
-msgstr "此扩展首选项"
+msgstr "此擴展首選項"
 
 #: prefs.js:519
 msgid "Restarting IBus"
-msgstr "重启 IBus"
+msgstr "重啓 IBus"
 
 #: prefs.js:523
 msgid "Exiting IBus"
@@ -362,31 +362,31 @@ msgstr "指示"
 
 #: prefs.js:530
 msgid "Use input source indicator"
-msgstr "开启输入源指示器"
+msgstr "開啓輸入源指示器"
 
 #: prefs.js:534
 msgid "Indicate only when switching input source"
-msgstr "仅当切换输入源指示"
+msgstr "僅當切換輸入源指示"
 
 #: prefs.js:538
 msgid "Indicate only when using ASCII mode"
-msgstr "仅当使用英文输入时指示"
+msgstr "僅當使用英文輸入時指示"
 
 #: prefs.js:542
 msgid "Enable right click to close indicator"
-msgstr "右击关闭指示器"
+msgstr "右擊關閉指示器"
 
 #: prefs.js:546
 msgid "Enable scroll to switch input source"
-msgstr "滚动切换输入源"
+msgstr "滾動切換輸入源"
 
 #: prefs.js:550
 msgid "Indicator popup animation"
-msgstr "指示器显示动画"
+msgstr "指示器顯示動畫"
 
 #: prefs.js:605
 msgid "Theme"
-msgstr "主题"
+msgstr "主題"
 
 #: prefs.js:618
 msgid "Background"
@@ -398,15 +398,15 @@ msgstr "保存"
 
 #: prefs.js:817
 msgid "Open"
-msgstr "打开"
+msgstr "打開"
 
 #: prefs.js:1440
 msgid "About"
-msgstr "关于"
+msgstr "關於"
 
 #: prefs.js:1459
 msgid "unknown (self-build ?)"
-msgstr "未知（自编译？）"
+msgstr "未知（自編譯？）"
 
 #: prefs.js:1496
 msgid "Version: "
@@ -416,7 +416,7 @@ msgstr "版本： "
 msgid ""
 "Full customization of appearance, behavior, system tray and input source "
 "indicator for IBus."
-msgstr "深度定制 IBus 的外观、行为、系统托盘以及输入指示。"
+msgstr "深度定製 IBus 的外觀、行為、系統托盤以及輸入指示。"
 
 #: prefs.js:1519
 msgid ""
@@ -424,7 +424,7 @@ msgid ""
 "HollowMan6\">Hollow Man</a> &lt;<a href=\"mailto:hollowman@hollowman.ml"
 "\">hollowman@hollowman.ml</a>&gt;</span>"
 msgstr ""
-"<span size=\"small\">版权所有 © 2021 <a href=\"https://github.com/HollowMan6\""
+"<span size=\"small\">版權所有 © 2021 <a href=\"https://github.com/HollowMan6\""
 ">Hollow Man</a> &lt;<a href=\"mailto:hollowman@hollowman.ml\""
 ">hollowman@hollowman.ml</a>&gt;</span>"
 
@@ -433,7 +433,7 @@ msgid ""
 "<span size=\"small\">Source Code: <a href=\"https://github.com/openSUSE/"
 "Customize-IBus\">https://github.com/openSUSE/Customize-IBus</a></span>"
 msgstr ""
-"<span size=\"small\">源代码：<a href=\"https://github.com/openSUSE/Customize-"
+"<span size=\"small\">源代碼：<a href=\"https://github.com/openSUSE/Customize-"
 "IBus\">https://github.com/openSUSE/Customize-IBus</a></span>"
 
 #: prefs.js:1543
@@ -443,29 +443,29 @@ msgid ""
 "\"https://github.com/openSUSE\">@openSUSE</a></b>.</span>"
 msgstr ""
 "<span size=\"small\">受 <a href=\"https://summerofcode.withgoogle.com/"
-"projects/#5505085183885312\">2021谷歌编程之夏</a> <b><a href=\"https://github.com/"
-"openSUSE\">@openSUSE</a></b>资助。</span>"
+"projects/#5505085183885312\">2021谷歌編程之夏</a> <b><a href=\"https://github.com/"
+"openSUSE\">@openSUSE</a></b>資助。</span>"
 
 #: prefs.js:1599
 msgid "Other official customization settings"
-msgstr "其它官方自定义设置"
+msgstr "其它官方自定義設置"
 
 #: prefs.js:1636
 msgid ""
 "<span size=\"small\">This program comes with ABSOLUTELY NO WARRANTY.</span>"
-msgstr "<span size=\"small\">本程序不提供任何担保。</span>"
+msgstr "<span size=\"small\">本程序不提供任何擔保。</span>"
 
 #: prefs.js:1648
 msgid ""
 "<span size=\"small\">See the <a href=\"https://www.gnu.org/licenses/gpl"
 "\">GNU General Public License, version 3 or later</a> for details.</span>"
 msgstr ""
-"<span size=\"small\">参见 <a href=\"https://www.gnu.org/licenses/gpl\">GNU "
-"通用公共许可证，第三版或更高版本</a>以了解更多细节。</span>"
+"<span size=\"small\">參見 <a href=\"https://www.gnu.org/licenses/gpl\">GNU "
+"通用公共許可證，第三版或更高版本</a>以瞭解更多細節。</span>"
 
 #: prefs.js:1682 prefs.js:1764 prefs.js:1821 prefs.js:1864 prefs.js:1946
 msgid "Help"
-msgstr "帮助"
+msgstr "幫助"
 
 #: prefs.js:1691
 msgid ""
@@ -476,8 +476,8 @@ msgid ""
 "order when switching, reposition candidate box by dragging when input, and "
 "also show or hide candidate box page buttons."
 msgstr ""
-"这里你可以设定 IBus 候选框方向、动画、右键点击来打开菜单或者切换输入源、滚动来切换当前页面或者候选词、固定候选框不跟随光标位置、字体、当窗口切换时输"
-"入法默认切换语言、候选框透明度、固定输入法列表顺序、当输入时通过拖拽移动候选框、以及显示或隐藏候选框调页按钮。"
+"這裏你可以設定 IBus 候選框方向、動畫、右鍵點擊來打開菜單或者切換輸入源、滾動來切換當前頁面或者候選詞、固定候選框不跟隨光標位置、字體、當窗口切換時輸"
+"入法默認切換語言、候選框透明度、固定輸入法列表順序、當輸入時通過拖拽移動候選框、以及顯示或隱藏候選框調頁按鈕。"
 
 #: prefs.js:1704
 msgid ""
@@ -488,9 +488,9 @@ msgid ""
 "forever after reposition if you set to <b>remember last position</b>, and "
 "restore at next login.</span>"
 msgstr ""
-"<span size=\"small\"><b>注：</b> 如果 <b>固定候选框</b> 被启用，你可以为候选框设定9种方位，推荐同时启用 "
-"<b>拖拽移动候选框</b> 从而可以随时移动候选框位置。当选择 <b>记住最后位置</b> "
-"时，可以永远记住你上次拖拽的位置，并且在下次登陆时恢复。</span>"
+"<span size=\"small\"><b>注：</b> 如果 <b>固定候選框</b> 被啓用，你可以為候選框設定9種方位，推薦同時啓用 "
+"<b>拖拽移動候選框</b> 從而可以隨時移動候選框位置。當選擇 <b>記住最後位置</b> "
+"時，可以永遠記住你上次拖拽的位置，並且在下次登陸時恢復。</span>"
 
 #: prefs.js:1717
 msgid ""
@@ -500,8 +500,8 @@ msgid ""
 "in the APP's window, and the newly-opened APP will follow the configuration. "
 "APP's Input State will be remembered forever.</span>"
 msgstr ""
-"<span size=\"small\"><b>注：</b> 如果 <b>自动切换源</b> 被启用，并且你启用了<b>记住输入状态</b>，那么你在一个"
-"应用中手动切换了输入源，则该应用的输入源模式将会被自动记住。另外，新打开的应用将会遵循你的输入源配置，应用的输入状态将会永远被记住。</span>"
+"<span size=\"small\"><b>注：</b> 如果 <b>自動切換源</b> 被啓用，並且你啓用了<b>記住輸入狀態</b>，那麼你在一個"
+"應用中手動切換了輸入源，則該應用的輸入源模式將會被自動記住。另外，新打開的應用將會遵循你的輸入源配置，應用的輸入狀態將會永遠被記住。</span>"
 
 #: prefs.js:1730
 msgid ""
@@ -510,8 +510,8 @@ msgid ""
 "rearranged position will last until the end of this session. If not the "
 "rearranged position will only last for the specific input.</span>"
 msgstr ""
-"<span size=\"small\"><b>注：</b> 如果 <b>拖拽移动候选框</b> "
-"被启用，并且你启用了<b>固定候选框</b>，那么你手动拖拽移动的位置将会保持到此次会话结束。否则手动拖拽移动的位置只会在本次输入中保持。</span>"
+"<span size=\"small\"><b>注：</b> 如果 <b>拖拽移動候選框</b> "
+"被啓用，並且你啓用了<b>固定候選框</b>，那麼你手動拖拽移動的位置將會保持到此次會話結束。否則手動拖拽移動的位置只會在本次輸入中保持。</span>"
 
 #: prefs.js:1773
 msgid ""
@@ -520,8 +520,8 @@ msgid ""
 "system tray to restore the feelings on Non-GNOME desktop environment. You "
 "can also start or restart IBus by pressing the top button."
 msgstr ""
-"这里你可以选择显示 IBus 托盘图标，启用直接点击切换输入源，为位于系统托盘处的 IBus 输入源指示菜单增加额外的菜单项，来复原 IBus "
-"在非GNOME桌面的体验。你还可以通过点击最上方的按钮来启动或者重启 IBus。"
+"這裏你可以選擇顯示 IBus 托盤圖標，啓用直接點擊切換輸入源，為位於系統托盤處的 IBus 輸入源指示菜單增加額外的菜單項，來複原 IBus "
+"在非GNOME桌面的體驗。你還可以通過點擊最上方的按鈕來啓動或者重啓 IBus。"
 
 #: prefs.js:1787
 msgid ""
@@ -530,8 +530,8 @@ msgid ""
 "with left key, you will have input source switched, and click right key will "
 "open the menu as normal, vice versa.</span>"
 msgstr ""
-"<span size=\"small\"><b>注：</b> 如果 <b>点击切换输入源</b> "
-"被启用，当你选择左键时，如果你用左键点击托盘图标，将会切换输入源，右键点击则会和往常一样打开菜单，反之亦然。</span>"
+"<span size=\"small\"><b>注：</b> 如果 <b>點擊切換輸入源</b> "
+"被啓用，當你選擇左鍵時，如果你用左鍵點擊托盤圖標，將會切換輸入源，右鍵點擊則會和往常一樣打開菜單，反之亦然。</span>"
 
 #: prefs.js:1830
 msgid ""
@@ -543,8 +543,8 @@ msgid ""
 "source or drag to move indicator, indicator opacity, enable auto-hide and "
 "auto-hide timeout (in seconds)."
 msgstr ""
-"这里你可以选择开启输入源指示器，默认是当你打字、移动文字光标或者切换输入源时显示指示器。你可以设定仅当切换输入源时显示指示器，你还可以设定仅当在英文输入时"
-"中显示指示，鼠标右击关闭指示器，滚动切换输入源，指示器显示动画，字体，鼠标左击切换输入源拖拽移动指示器，指示器透明度和启用自动隐藏时延，自动隐藏时延（单位"
+"這裏你可以選擇開啓輸入源指示器，默認是當你打字、移動文字光標或者切換輸入源時顯示指示器。你可以設定僅當切換輸入源時顯示指示器，你還可以設定僅當在英文輸入時"
+"中顯示指示，鼠標右擊關閉指示器，滾動切換輸入源，指示器顯示動畫，字體，鼠標左擊切換輸入源拖拽移動指示器，指示器透明度和啓用自動隱藏時延，自動隱藏時延（單位"
 "：秒）。"
 
 #: prefs.js:1873
@@ -553,9 +553,9 @@ msgid ""
 "openSUSE/IBus-Theme-Tools\">IBus Theme Tools</a> or provided by <a href="
 "\"https://github.com/openSUSE/IBus-Theme-Hub\">IBus Theme Hub</a>."
 msgstr ""
-"支持导入由 <a href=\"https://github.com/openSUSE/IBus-Theme-Tools\">IBus 主题工具</a> "
-"生成的或者由 <a href=\"https://github.com/openSUSE/IBus-Theme-Hub\">IBus 主题集合</a> "
-"提供的样式表。"
+"支持導入由 <a href=\"https://github.com/openSUSE/IBus-Theme-Tools\">IBus 主題工具</a> "
+"生成的或者由 <a href=\"https://github.com/openSUSE/IBus-Theme-Hub\">IBus 主題集合</a> "
+"提供的樣式表。"
 
 #: prefs.js:1886
 msgid ""
@@ -564,8 +564,8 @@ msgid ""
 "off, and use dark theme when on. When only the light theme or dark theme is "
 "turned on, the IBus theme will always use the theme that is turned on."
 msgstr ""
-"当浅色主题和深色主题同时开启时，IBus 主题将会自动跟随 GNOME "
-"夜灯模式，关闭时使用浅色主题，开启时使用深色主题。当浅色主题和深色主题只有一个被开启时，扩展将会始终使用那个开启的主题。"
+"當淺色主題和深色主題同時開啓時，IBus 主題將會自動跟隨 GNOME "
+"夜燈模式，關閉時使用淺色主題，開啓時使用深色主題。當淺色主題和深色主題只有一個被開啓時，擴展將會始終使用那個開啓的主題。"
 
 #: prefs.js:1899
 msgid ""
@@ -573,20 +573,20 @@ msgid ""
 "add any classes that's not started with <i>.candidate-*</i> into IBus "
 "stylesheet to prevent from corrupting system themes.</b></span>"
 msgstr ""
-"<span size=\"small\"><b><i>警告：</i> 如非调试需要，请勿在 IBus 主题样式表中加入非 <i>."
-"candidate-*</i> 开头的类，以免干扰系统主题。</b></span>"
+"<span size=\"small\"><b><i>警告：</i> 如非調試需要，請勿在 IBus 主題樣式表中加入非 <i>."
+"candidate-*</i> 開頭的類，以免干擾系統主題。</b></span>"
 
 #: prefs.js:1912
 msgid ""
 "<span size=\"small\"><b>Note:</b> Support stylesheets hot reload, CSS "
 "changes reflecting in real-time.</span>"
-msgstr "<span size=\"small\"><b>注：</b> 支持样式表热重载, CSS 的变化会实时地体现出来。</span>"
+msgstr "<span size=\"small\"><b>注：</b> 支持樣式表熱重載, CSS 的變化會實時地體現出來。</span>"
 
 #: prefs.js:1955
 msgid ""
 "Support customizing your IBus Input window background with a picture. It has "
 "a higher priority than the theme-defined background."
-msgstr "支持使用图片来自定义 IBus 候选框背景，其具有比主题背景更高的优先级。"
+msgstr "支持使用圖片來自定義 IBus 候選框背景，其具有比主題背景更高的優先級。"
 
 #: prefs.js:1968
 msgid ""
@@ -596,8 +596,8 @@ msgid ""
 "light background or dark background is turned on, the IBus background will "
 "always use the background that is turned on."
 msgstr ""
-"当浅色背景和深色背景同时开启时，IBus 背景将会自动跟随 GNOME "
-"夜灯模式，关闭时使用浅色背景，开启时使用深色背景。当浅色背景和深色背景只有一个被开启时，扩展将会始终使用那个开启的背景。"
+"當淺色背景和深色背景同時開啓時，IBus 背景將會自動跟隨 GNOME "
+"夜燈模式，關閉時使用淺色背景，開啓時使用深色背景。當淺色背景和深色背景只有一個被開啓時，擴展將會始終使用那個開啓的背景。"
 
 #: prefs.js:1981
 msgid ""
@@ -607,8 +607,8 @@ msgid ""
 "the corresponding <b>Use custom background</b> again to make it effective "
 "after manually mounting.</span>"
 msgstr ""
-"<span size=\"small\"><b>注：</b> 请确保背景图片始终可以访问，如你的图片存放在可移动设备，系统默认不挂载，"
-"每次手动挂载后请关闭并重新开启对应 <b>自定义背景</b> 来使其生效。</span>"
+"<span size=\"small\"><b>注：</b> 請確保背景圖片始終可以訪問，如你的圖片存放在可移動設備，系統默認不掛載，"
+"每次手動掛載後請關閉並重新開啓對應 <b>自定義背景</b> 來使其生效。</span>"
 
 #: prefs.js:2046
 msgid ""
@@ -621,12 +621,12 @@ msgstr "取消"
 
 #: prefs.js:2099
 msgid "OK"
-msgstr "确认"
+msgstr "確認"
 
 #: prefs.js:2101
 msgid "Reset All Settings to Default?"
-msgstr "是否将所有设置重置为默认值？"
+msgstr "是否將所有設置重置為默認值？"
 
 #: prefs.js:2107
 msgid "This will discard all the current configurations!"
-msgstr "这将丢弃当前的所有配置！"
+msgstr "這將丟棄當前的所有配置！"
