--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-customize-ibus (73) hirsute; urgency=medium
+
+  * v73: Fix support for wayland and reposition bug; Rearrange UI.
+
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Wed, 06 Oct 2021 11:10:58 +0800
+
 gnome-shell-extension-customize-ibus (72) hirsute; urgency=medium
 
   * v72: Add support for GNOME 41. Enable to reset to follow system themes and backgrounds.
