V76: Support auto-manage the ASCII Mode list
and a show delay for input source indicator. #15

Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-customize-ibus (76) hirsute; urgency=medium
+
+  * v76: Support auto-manage the ASCII Mode list, and a show delay for input source indicator.
+
+ -- Hollow Man (Domain Address) <hollowman@hollowman.ml>  Sat, 30 Oct 2021 17:20:52 +0800
+
 gnome-shell-extension-customize-ibus (75) hirsute; urgency=medium
 
   * v75: Fix support for wayland and reposition bug; Rearrange UI.
