--- a/deb/debian/changelog
+++ b/deb/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell-extension-customize-ibus (81) hirsute; urgency=medium
+
+  * v81: Initial support for GNOME 42.
+
+ -- Hollow Man (Domain Address) <hollowman@opensuse.org>  Wed, 09 Mar 2022 16:50:11 +0800
+
 gnome-shell-extension-customize-ibus (80) hirsute; urgency=medium
 
   * v80: Relief from libnotify dependency.
